--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.5.5
   multi_image_picker: ^4.8.01
+  file_picker: ^6.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
