--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_storage: ^11.5.5
   multi_image_picker: ^4.8.01
   file_picker: ^6.1.1
+  provider:
+  firebase_app_check:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
